@@ -1,3 +1,8 @@
+2008-06-17  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_win32.c: Ensure TIFFOpenW() uses same FILE_SHARE flags
+	as TIFFOpen().
+
 2008-06-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirwrite.c: Fix alignment problems affecting architectures
